--- a/redux-toolkit/package.json
+++ b/redux-toolkit/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/redux-logger": "^3.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
